--- a/manifest.yml
+++ b/manifest.yml
@@ -5,3 +5,4 @@ applications:
   instances: 1
   path: target/secret-agent.jar
   buildpack: https://github.com/cf-platform-eng/basic-boot-buildpack
+  health-check-type: none
