--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -5,14 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.2.RELEASE</version>
+        <groupId>io.pivotal.ecosystem</groupId>
+        <artifactId>secret-agent</artifactId>
+        <version>1.0.0</version>
     </parent>
 
-    <groupId>io.pivotal.ecosystem</groupId>
     <artifactId>agent</artifactId>
-    <version>1.0.0</version>
 
     <dependencies>
 
@@ -26,29 +24,10 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-        </dependency>
-
     </dependencies>
 
     <build>
         <finalName>secret-agent</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
     </build>
 
 </project>
